--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Kernelcon 2021</title>
     <link rel="shortcut icon" href="./assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <meta http-equiv="refresh" content="0; URL=https://shop.spreadshirt.com/kernelcon-cyber-shop/" />
+    <meta http-equiv="refresh" content="0; URL=https://kernelcon.square.site/" />
   </head>
   <body>
   </body>
