--- a/ibom.html
+++ b/ibom.html
@@ -68,18 +68,16 @@
     <div>
       <h3 class="float-md-start mb-0">1337 khz badge</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="index.html">Home</a>
+        <a class="nav-link fw-bold py-1 px-0" aria-current="page" href="index.html">Home</a>
         <a class="nav-link fw-bold py-1 px-0" href="about.html">About</a>
-        <a class="nav-link fw-bold py-1 px-0" href="ibom.html">Interactive BOM</a>
+        <a class="nav-link fw-bold py-1 px-0 active" href="ibom.html">Interactive BOM</a>
         <a class="nav-link fw-bold py-1 px-0" href="activities.html">Activities</a>
       </nav>
     </div>
   </header>
 
-  <main class="px-3">
-    <img class="img-fluid" src="Radio.png">
-    <p class="lead">this year's badge is an AM radio. there are several transmiters around the con to explore! this site contains and interative bill of materials (BOM) and houses the activites from the badge hacking village</p>
-  </main>
+  <br><a class="mt-auto text-white-50 " href="ibomog.html">FULL SCREEN</a><br>
+  <iframe src="ibomog.html" style="height:100%;width:100%;"></iframe>
 
   <footer class="mt-auto text-white-50">
     <p>kernelcon 2023 | built by kevin & tyler</p>
